--- a/src/app/video-list/video-list.component.html
+++ b/src/app/video-list/video-list.component.html
@@ -1,7 +1,8 @@
 <ag-grid-angular
   class="ag-theme-alpine"
   [gridOptions]="gridOptions"
-  [rowData]="rowData$ | ngrxPush"
-  [columnDefs]="columnDefs">
+  [rowData]="rowData$ | async"
+  [columnDefs]="columnDefs$ | async"
+  (gridReady)="onGridReady($event)">
 </ag-grid-angular>
 
