--- a/src/app/video-list/components/checkbox/checkbox.component.html
+++ b/src/app/video-list/components/checkbox/checkbox.component.html
@@ -1,1 +1,1 @@
-<input type="checkbox" [value]="allRowsSelectedToggle" (change)="onChange($event)">
+<input type="checkbox" [ngModel]="allRowsSelectedToggle" (ngModelChange)="onChange($event)">
