context menu for title column

--- a/src/app/video-list/video-list.component.html
+++ b/src/app/video-list/video-list.component.html
@@ -3,6 +3,7 @@
   [gridOptions]="gridOptions"
   [rowData]="rowData$ | async"
   [columnDefs]="columnDefs$ | async"
+  [getContextMenuItems]="getContextMenuItems"
   (selectionChanged)="onSelectionChanged($event)"
   (gridReady)="onGridReady($event)">
 </ag-grid-angular>
